--- a/HW2-Server/pom.xml
+++ b/HW2-Server/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cs6650.hw1_kaixi</groupId>
+  <groupId>cs6650.kaixi</groupId>
   <artifactId>HW2</artifactId>
   <version>1.0-SNAPSHOT</version>
   <dependencies>
@@ -30,11 +30,6 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.23</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.4</version> <!-- make sure to use the latest version available -->
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
